c4prj2_input/grade.txt
Grading at Thu Mar 11 17:34:15 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:27:26: error: ‘idx’ undeclared (first use in this function)
       add_future_card(fc,idx,c);
                          ^
input.c:27:26: note: each undeclared identifier is reported only once for each function it appears in
input.c:16:7: error: variable ‘Idx’ set but not used [-Werror=unused-but-set-variable]
   int Idx;
       ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
